--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
   <head> <title> My webpage </title> </head>
-  <body>
-    Hello there, awesome person! 
+  <body> <h1>
+    Hello there, awesome person! This is a level 1 heading! </h1>
   </body>
 </html>
