--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
   <head> <title> My webpage </title> </head>
   <body> <h1>
     Hello there, awesome person! This is a level 1 heading! </h1>
+    <img src="https://avatars.githubusercontent.com/u/49114527?v=4">
   </body>
 </html>
