--- a/index.html
+++ b/index.html
@@ -5,5 +5,12 @@
   <body> <h1>
     Hello there, awesome person! This is a level 1 heading! </h1>
     <img src="https://avatars.githubusercontent.com/u/49114527?v=4">
+    <h2> These are my favorite websites: <h2>
+      <ol>
+        <li> Youtube </li>
+        <li> Google </li>
+        <li> Facebook </li>
+      </ol>
+      
   </body>
 </html>
