--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <img src="https://avatars.githubusercontent.com/u/49114527?v=4">
     <h2> These are my favorite websites: <h2>
       <ol>
-        <li> Youtube </li>
-        <li> Google </li>
-        <li> Facebook </li>
+        <li> <a href= "https://www.youtube.com"> Youtube </a> </li>
+        <li> <a href= "https://www.google.com">  Google  </a> </li>
+        <li> <a href= "https://www.facebook.com"> Facebook </a> </li>
       </ol>
       
   </body>
