--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 
 <html>
-  <head> <title> My webpage </title> </head>
+  <head> <title> My webpage </title> <link rel="stylesheet" href="style.css"> </head>
   <body> <h1>
     Hello there, awesome person! This is a level 1 heading! </h1>
     <img src="https://avatars.githubusercontent.com/u/49114527?v=4">
